# iLaunchboard

./: CLAUDE.md  LICENSE  NOTICE  README.md  index.html  package.json
scripts/: bump-version.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CommandPanel.tsx  JobDetail.tsx  JobForm.tsx  JobList.test.tsx  JobList.tsx  JobRow.tsx  LogViewer.tsx  SearchBar.tsx  SettingsDialog.tsx
src/hooks/: useJobs.test.ts  useJobs.ts
src/lib/: i18n.tsx  settings.ts
